--- a/Resources/Private/Assets/MapLibre.pcss
+++ b/Resources/Private/Assets/MapLibre.pcss
@@ -2,12 +2,9 @@
 @import url("./Styles/Global.pcss");
 
 .jonnitto-maps .maplibregl-ctrl-attrib-inner a:not([class]) {
-  color: inherit;
-  text-decoration: underline;
-
   &:hover,
   &:focus {
-    text-decoration: none;
+    color: #000;
   }
 }
 
